@@ -8,7 +8,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @Transactional
@@ -80,7 +80,7 @@ public class ExamManager implements ExamUseCase {
       int count = entry.getValue() != null ? entry.getValue() : 0;
       List<Question> qs = questionRepo.findVisibleByUnitIdAndUserId(unitId, command.userId());
       if (selectedDifficulty != null) {
-        qs = qs.stream().filter(q -> q.getDifficulty() == selectedDifficulty).collect(Collectors.toList());
+        qs = qs.stream().filter(q -> q.getDifficulty() == selectedDifficulty).toList();
       }
       Collections.shuffle(qs, rnd);
       if (count > 0 && count < qs.size()) {
@@ -102,7 +102,7 @@ public class ExamManager implements ExamUseCase {
     List<QuestionData> questionDataList = pool.stream().map(q -> {
       List<AnswerData> answers = answerRepo.findByQuestionId(q.getId()).stream()
           .map(a -> new AnswerData(a.getId(), a.getText()))
-          .collect(Collectors.toList());
+          .toList();
       Collections.shuffle(answers, rnd);
       return new QuestionData(q.getId(), q.getText(), answers);
     }).toList();
@@ -131,7 +131,7 @@ public class ExamManager implements ExamUseCase {
     for (Unit u : units) {
       List<Question> qs = questionRepo.findVisibleByUnitIdAndUserId(u.getId(), command.userId());
       if (selectedDifficulty != null) {
-        qs = qs.stream().filter(q -> q.getDifficulty() == selectedDifficulty).collect(Collectors.toList());
+        qs = qs.stream().filter(q -> q.getDifficulty() == selectedDifficulty).toList();
       }
       allQuestions.addAll(qs);
     }
@@ -148,7 +148,7 @@ public class ExamManager implements ExamUseCase {
     List<QuestionData> questionDataList = pool.stream().map(q -> {
       List<AnswerData> answers = answerRepo.findByQuestionId(q.getId()).stream()
           .map(a -> new AnswerData(a.getId(), a.getText()))
-          .collect(Collectors.toList());
+          .toList();
       Collections.shuffle(answers, rnd);
       return new QuestionData(q.getId(), q.getText(), answers);
     }).toList();
@@ -163,22 +163,9 @@ public class ExamManager implements ExamUseCase {
         java.time.OffsetDateTime.now(), null, totalSec, null);
     attemptRepo.save(attempt);
 
-    Question.Difficulty difficulty = null;
-    if (command.difficulty() != null && !command.difficulty().isBlank()) {
-      try {
-        difficulty = Question.Difficulty.valueOf(command.difficulty());
-      } catch (IllegalArgumentException ignored) {
-      }
-    }
-    final Question.Difficulty selectedDifficulty = difficulty;
+    Question.Difficulty selectedDifficulty = parseDifficulty(command.difficulty());
 
-    // Load subjects for the syllabus, filtering by subjectIds if provided
-    List<com.akdemya.domain.model.Subject> subjects =
-        subjectRepo.findVisibleBySyllabusId(command.syllabusId(), command.userId());
-    if (command.subjectIds() != null && !command.subjectIds().isEmpty()) {
-      java.util.Set<UUID> filter = new java.util.HashSet<>(command.subjectIds());
-      subjects = subjects.stream().filter(s -> filter.contains(s.getId())).collect(Collectors.toList());
-    }
+    List<com.akdemya.domain.model.Subject> subjects = getFilteredSubjects(command);
 
     if (subjects.isEmpty()) {
       throw new java.util.NoSuchElementException("No subjects found for the given syllabus");
@@ -192,7 +179,7 @@ public class ExamManager implements ExamUseCase {
       for (Unit unit : units) {
         List<Question> qs = questionRepo.findVisibleByUnitIdAndUserId(unit.getId(), command.userId());
         if (selectedDifficulty != null) {
-          qs = qs.stream().filter(q -> q.getDifficulty() == selectedDifficulty).collect(Collectors.toList());
+          qs = qs.stream().filter(q -> q.getDifficulty() == selectedDifficulty).toList();
         }
         subjectQuestions.addAll(qs);
       }
@@ -208,22 +195,7 @@ public class ExamManager implements ExamUseCase {
 
     // Distribute count proportionally across subjects, then pick randomly within each
     int totalCount = command.count() > 0 ? Math.min(command.count(), totalAvailable) : totalAvailable;
-    List<Question> pool = new ArrayList<>();
-
-    int remaining = totalCount;
-    List<Map.Entry<UUID, List<Question>>> entries = new ArrayList<>(questionsBySubject.entrySet());
-    for (int i = 0; i < entries.size(); i++) {
-      List<Question> subjectQs = new ArrayList<>(entries.get(i).getValue());
-      int quota = (i == entries.size() - 1)
-          ? remaining
-          : (int) Math.round((double) subjectQs.size() / totalAvailable * totalCount);
-      quota = Math.min(quota, subjectQs.size());
-      quota = Math.min(quota, remaining);
-      Collections.shuffle(subjectQs, rnd);
-      pool.addAll(subjectQs.subList(0, quota));
-      remaining -= quota;
-      if (remaining <= 0) break;
-    }
+    List<Question> pool = distributeQuestionsProportionally(questionsBySubject, totalCount, totalAvailable);
     Collections.shuffle(pool, rnd);
 
     List<ExamAttemptAnswer> placeholders = new ArrayList<>();
@@ -235,7 +207,7 @@ public class ExamManager implements ExamUseCase {
     List<QuestionData> questionDataList = pool.stream().map(q -> {
       List<AnswerData> answers = answerRepo.findByQuestionId(q.getId()).stream()
           .map(a -> new AnswerData(a.getId(), a.getText()))
-          .collect(Collectors.toList());
+          .toList();
       Collections.shuffle(answers, rnd);
       return new QuestionData(q.getId(), q.getText(), answers);
     }).toList();
@@ -312,7 +284,7 @@ public class ExamManager implements ExamUseCase {
           .orElseThrow(() -> new IllegalArgumentException("Invalid question ID"));
       List<AnswerData> answers = answerRepo.findByQuestionId(q.getId()).stream()
           .map(a -> new AnswerData(a.getId(), a.getText()))
-          .collect(Collectors.toList());
+          .toList();
       return new AttemptQuestionData(q.getId(), q.getText(), answers, e.getAnswerId());
     }).toList();
 
@@ -343,52 +315,104 @@ public class ExamManager implements ExamUseCase {
 
     List<AttemptSummary> summaries = new ArrayList<>();
     for (ExamAttempt attempt : attempts) {
-      List<ExamAttemptAnswer> entries = attemptAnsRepo.findByAttemptId(attempt.getId());
-      int total = entries.size();
-      int correct = 0;
-      int wrong = 0;
-      for (ExamAttemptAnswer e : entries) {
-        if (e.getAnswerId() == null)
-          continue;
-        Answer ans = answerCache.computeIfAbsent(e.getAnswerId(), id -> answerRepo.findById(id).orElse(null));
-        if (ans != null && ans.isCorrect()) {
-          correct++;
-        } else if (ans != null) {
-          wrong++;
-        }
-      }
-      ExamScoringCalculator.ScoringResult scoring = scoringCalculator.compute(total, correct, wrong, penaltyRatio);
-
-      String subjectName = "Desconocida";
-      if (!entries.isEmpty()) {
-        Question q = questionCache.computeIfAbsent(entries.get(0).getQuestionId(),
-            id -> questionRepo.findById(id).orElse(null));
-        if (q != null) {
-          Unit unit = unitCache.computeIfAbsent(q.getUnitId(), id -> unitRepo.findById(id).orElse(null));
-          if (unit != null) {
-            Subject subject = subjectCache.computeIfAbsent(unit.getSubjectId(), id -> subjectRepo.findById(id).orElse(null));
-            if (subject != null) {
-              subjectName = subject.getName();
-            }
-          }
-        }
-      }
-
-      summaries.add(new AttemptSummary(
-          attempt.getId(),
-          subjectName,
-          attempt.getStartedAt(),
-          attempt.getFinishedAt(),
-          attempt.getTotalTimeSeconds() == null ? 0 : attempt.getTotalTimeSeconds(),
-          attempt.getScore(),
-          total,
-          correct,
-          wrong,
-          scoring.percentage()
-      ));
+      summaries.add(getAttemptSummary(attempt, penaltyRatio, answerCache, questionCache, unitCache, subjectCache));
     }
 
     return summaries;
+  }
+
+  private Question.Difficulty parseDifficulty(String difficulty) {
+    if (difficulty == null || difficulty.isBlank()) {
+      return null;
+    }
+    try {
+      return Question.Difficulty.valueOf(difficulty);
+    } catch (IllegalArgumentException ignored) {
+      return null;
+    }
+  }
+
+  private List<Subject> getFilteredSubjects(StartFromSyllabusCommand command) {
+    List<Subject> subjects = subjectRepo.findVisibleBySyllabusId(command.syllabusId(), command.userId());
+    if (command.subjectIds() != null && !command.subjectIds().isEmpty()) {
+      java.util.Set<UUID> filter = new java.util.HashSet<>(command.subjectIds());
+      return subjects.stream().filter(s -> filter.contains(s.getId())).toList();
+    }
+    return subjects;
+  }
+
+  private List<Question> distributeQuestionsProportionally(Map<UUID, List<Question>> questionsBySubject, int totalCount,
+      int totalAvailable) {
+    List<Question> pool = new ArrayList<>();
+    int remaining = totalCount;
+    List<Map.Entry<UUID, List<Question>>> entries = new ArrayList<>(questionsBySubject.entrySet());
+
+    for (int i = 0; i < entries.size(); i++) {
+      List<Question> subjectQs = new ArrayList<>(entries.get(i).getValue());
+      int quota = (i == entries.size() - 1)
+          ? remaining
+          : (int) Math.round((double) subjectQs.size() / totalAvailable * totalCount);
+      quota = Math.min(quota, Math.min(subjectQs.size(), remaining));
+
+      Collections.shuffle(subjectQs, rnd);
+      pool.addAll(subjectQs.subList(0, quota));
+      remaining -= quota;
+      if (remaining <= 0)
+        break;
+    }
+    return pool;
+  }
+
+  private AttemptSummary getAttemptSummary(ExamAttempt attempt, int penaltyRatio,
+      Map<UUID, Answer> answerCache, Map<UUID, Question> questionCache,
+      Map<UUID, Unit> unitCache, Map<UUID, Subject> subjectCache) {
+
+    List<ExamAttemptAnswer> entries = attemptAnsRepo.findByAttemptId(attempt.getId());
+    int total = entries.size();
+    int correct = 0;
+    int wrong = 0;
+
+    for (ExamAttemptAnswer e : entries) {
+      if (e.getAnswerId() == null)
+        continue;
+      Answer ans = answerCache.computeIfAbsent(e.getAnswerId(), id -> answerRepo.findById(id).orElse(null));
+      if (ans != null && ans.isCorrect()) {
+        correct++;
+      } else if (ans != null) {
+        wrong++;
+      }
+    }
+
+    ExamScoringCalculator.ScoringResult scoring = scoringCalculator.compute(total, correct, wrong, penaltyRatio);
+    String subjectName = resolveSubjectName(entries, questionCache, unitCache, subjectCache);
+
+    return new AttemptSummary(
+        attempt.getId(),
+        subjectName,
+        attempt.getStartedAt(),
+        attempt.getFinishedAt(),
+        attempt.getTotalTimeSeconds() == null ? 0 : attempt.getTotalTimeSeconds(),
+        attempt.getScore(),
+        total,
+        correct,
+        wrong,
+        scoring.percentage());
+  }
+
+  private String resolveSubjectName(List<ExamAttemptAnswer> entries, Map<UUID, Question> questionCache,
+      Map<UUID, Unit> unitCache, Map<UUID, Subject> subjectCache) {
+    if (entries.isEmpty()) {
+      return "Desconocida";
+    }
+    Question q = questionCache.computeIfAbsent(entries.get(0).getQuestionId(),
+        id -> questionRepo.findById(id).orElse(null));
+    if (q == null) return "Desconocida";
+
+    Unit unit = unitCache.computeIfAbsent(q.getUnitId(), id -> unitRepo.findById(id).orElse(null));
+    if (unit == null) return "Desconocida";
+
+    Subject subject = subjectCache.computeIfAbsent(unit.getSubjectId(), id -> subjectRepo.findById(id).orElse(null));
+    return subject != null ? subject.getName() : "Desconocida";
   }
 
   @Override
